add menu content

--- a/index.html
+++ b/index.html
@@ -47,6 +47,51 @@
               oldest and most fundamentaly unifiying of <br>
                human experiences.</p>
     </div>
+    <div class="menu">
+        <h1>Explore <span style="color: #6CB840;">menu</span></h1>
+        <div id="menucontent">
+            <div class="burgertype"><p><strong>Burger name</strong><br>
+                There is something <br>
+                     profoundly <br>
+                     satisfying<br> 
+                    about sharing a meal.<img style="float: left; clear: left;" src="./IMAGES/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="100"></p>
+                    </div>
+                    <div class="burgertype"><p><strong>Burger name</strong><br>
+                        There is something <br>
+                             profoundly <br>
+                             satisfying<br> 
+                            about sharing a meal.<img style="float: left; clear: left;" src="./IMAGES/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="100"></p>
+                            </div>
+                            <div class="burgertype"><p><strong>Burger name</strong><br>
+                                There is something <br>
+                                     profoundly <br>
+                                     satisfying<br> 
+                                    about sharing a meal.<img style="float: left; clear: left;" src="./IMAGES/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="100"></p>
+                                    </div>
+                                    <div class="burgertype"><p><strong>Burger name</strong><br>
+                                        There is something <br>
+                                             profoundly <br>
+                                             satisfying<br> 
+                                            about sharing a meal.<img style="float: left; clear: left;" src="./IMAGES/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="100"></p>
+                                            </div>
+                                            <div class="burgertype"><p><strong>Burger name</strong><br>
+                                                There is something <br>
+                                                     profoundly <br>
+                                                     satisfying<br> 
+                                                    about sharing a meal.<img style="float: left; clear: left;" src="./IMAGES/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="100"></p>
+                                                    </div>
+                                                    <div class="burgertype"><p><strong>Burger name</strong><br>
+                                                        There is something <br>
+                                                             profoundly <br>
+                                                             satisfying<br> 
+                                                            about sharing a meal.<img style="float: left; clear: left;" src="./IMAGES/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="100"></p>
+                                                            </div>
+
+
+        </div>
+
+    </div>
+    <div>
     
 </body>
 </html>
