add content to deals section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,23 @@
         </div>
 
     </div>
-    <div>
+        <div class="deals">
+        
+            <div class="merge"><img src="./IMAGES/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" class="img1" alt="juice" height=>
+           <img src="./IMAGES/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" class="img2" alt="burger" height="">
+       </div>
+       <h1>Hot <span style="color: #6CB840;">deals</span></h1>
+          <div> <p><span style="color: #6CB840; font-size: 200%;" > SPECIAL COMBO PACK</span></p>
+           <p style="font-size: 200%;"><strong>Burger Pizz</strong></p>
+           <p style="font-size: 200%;"><strong>Fries & Drinks</strong></p>
+           <p style="text-align: center;">There is something profoundly satisfying <br>
+                about sharing a meal. Eating together,<br>
+                 breaking bread together, is one of the <br>
+                 oldest and most fundamentaly unifiying of<br>
+                  human experiences</p></div>
+               </div>
+   
+       </div>
     
 </body>
 </html>
