--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 </div>
     <div class="together">
-        <img src="./IMAGES/undraw_eating_together_tjhx.png" alt="eating together" height="500">
+        <img src="./IMAGES/undraw_eating_together_tjhx.png" alt="eating together" height="600">
        <div> <p><span style="color: #EAAB1B; font-size: 300%;">Eat Together</span></p>
         <p style="text-align: center;">There is something profoundly satisfying<br> 
             about sharing a meal. Eating together,<br>
@@ -102,7 +102,7 @@
         <h1>Hot <span style="color: #6CB840;">deals</span></h1>
         <div class="deals">
         
-            <div class="merge" ><img src="./IMAGES/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" class="img1" alt="juice" height=>
+            <div class="merge" ><img src="./IMAGES/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" class="img1" alt="juice" height="">
            <img src="./IMAGES/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" class="img2" alt="burger" height="">
        </div>
        
